Add prisma post install

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,3 +68,9 @@
     @apply bg-background text-foreground;
   }
 }
+.client-list tr:nth-child(even) {
+  @apply bg-[#F6F6F6];
+}
+.client-list td, .client-list th {
+  @apply border border-[#EDEDED];
+}
